--- a/MYDRAWING.HTML
+++ b/MYDRAWING.HTML
@@ -1,4 +1,4 @@
-<a href="MENU.html">GO TO MENU<br><br></a>
+<a href="index.html">GO TO MENU<br><br></a>
 
 <!--Canvas for defining graphics via JavaScript-->
 <canvas width="200" height="200" style="border: 5px solid rgb(214, 192, 93)" >
