--- a/MYFAVEVIDEOS.html
+++ b/MYFAVEVIDEOS.html
@@ -1,4 +1,4 @@
-<a href="MENU.html">GO TO MENU<br><br></a>
+<a href="index.html">GO TO MENU<br><br></a>
 
 <!--Embedding Video-->
 <video width="600" height="350" controls>
