--- a/MYINFO.HTML
+++ b/MYINFO.HTML
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>
-        <a href="MENU.html" target="_blank">GO TO MENU</a><br>
+        <a href="index.html" target="_blank">GO TO MENU</a><br>
         <br>
         Joannah Fae Aguila
     </h1>
